examples/test/testpolicy13829.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13829
  namespace: namespace320
spec:
  podSelector:
    matchLabels:
      key36: value49
      key3: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value26
          key5: value23
      podSelector:
        matchLabels:
          key10: value47
          key21: value19
          key12: value16
